--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li><button class="phonics-btn" data-audio="audio/letters/A.mp3">A</button></li>
             <li><button class="phonics-btn" data-audio="audio/letters/B.mp3">B</button></li>
             <li><button class="phonics-btn" data-audio="audio/letters/C.mp3">C</button></li>
+            <li><button class="phonics-btn" data-audio="audio/letters/D.mp3">D</button></li>
+            <li><button class="phonics-btn" data-audio="audio/letters/E.mp3">E</button></li>
+            <li><button class="phonics-btn" data-audio="audio/letters/F.mp3">F</button></li>
             <!-- Add more letters as needed -->
         </ul>
     </section>
@@ -28,6 +31,9 @@
             <li><button class="phonics-btn" data-audio="audio/words/cat.mp3">Cat</button></li>
             <li><button class="phonics-btn" data-audio="audio/words/dog.mp3">Dog</button></li>
             <li><button class="phonics-btn" data-audio="audio/words/hat.mp3">Hat</button></li>
+            <li><button class="phonics-btn" data-audio="audio/words/bat.mp3">Bat</button></li>
+            <li><button class="phonics-btn" data-audio="audio/words/mat.mp3">Mat</button></li>
+            <li><button class="phonics-btn" data-audio="audio/words/pen.mp3">Pen</button></li>
             <!-- Add more words as needed -->
         </ul>
     </section>
@@ -35,4 +41,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
